--- a/(1) preprocess images and save as patches.ipynb
+++ b/(1) preprocess images and save as patches.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## This notebook loads images saved in \"images\" folder into SlideManager. \n",
+    "## The images are split into 512 x 512 patches and saved to a new directory called \"patches\".\n",
+    "## Images saved in \"patches//0\" are benign, whereas \"patches//1\" are neoplastic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -53,26 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_dir(path): ## Creates directory if path doesn't exist\n",
     "    if os.path.exists(path) == False:\n",
-    "        os.mkdir(path)"
+    "        os.mkdirs(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated slides: 2\n",
-      "Number of normal slides: 2\n"
+      "Number of annotated slides: 1\n",
+      "Number of normal slides: 1\n"
      ]
     }
    ],
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,18 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of negative slides = 2\n",
+      "Number of negative slides = 1\n",
       "\n",
-      "105 tiles written for 00\n",
-      "\n",
-      "121 tiles written for 01\n"
+      "121 tiles written for case00_img01\n"
      ]
     }
    ],
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -185,11 +194,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated slides = 2\n",
+      "Number of annotated slides = 1\n",
       "\n",
-      "96 tiles written for 02\n",
-      "\n",
-      "106 tiles written for 03\n"
+      "106 tiles written for case00_img00\n"
      ]
     }
    ],
@@ -230,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -238,9 +245,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0 tiles written for 02\n",
-      "\n",
-      "13 tiles written for 03\n"
+      "13 tiles written for case00_img00\n"
      ]
     }
    ],
@@ -355,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,6 +390,13 @@
     "\n",
     "    tifffile.imwrite(path + file, im, photometric = 'rgb')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
