updated heatmap code and added false-colored images to directory

--- a/(05) train deep learning model with K-fold cross validation.ipynb
+++ b/(05) train deep learning model with K-fold cross validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "protected-ultimate",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "66bb1476",
    "metadata": {},
    "outputs": [],
@@ -62,16 +62,16 @@
     "    print('created validation folder for ' + str(test_case) + (' patches'))\n",
     "\n",
     "    ## Move test case 0 patches to the new folder\n",
-    "    for file in os.listdir(patches_dir + '//' + 'all//0//'):\n",
+    "    for file in os.listdir(patches_dir + '//0//'):\n",
     "        if file.startswith(test_case):\n",
-    "            source = patches_dir + '//all//0//' + file\n",
+    "            source = patches_dir + '//0//' + file\n",
     "            dest = patches_dir + '//validation//0//' + file\n",
     "            shutil.move(source, dest) #move to designated path\n",
     "\n",
     "    ## Move test case 1 patches to the new folder\n",
-    "    for file in os.listdir(patches_dir + '//all//1//'):\n",
+    "    for file in os.listdir(patches_dir + '//1//'):\n",
     "        if file.startswith(test_case):\n",
-    "            source = patches_dir + '//all//1//' + file\n",
+    "            source = patches_dir + '//1//' + file\n",
     "            dest = patches_dir + '//validation//1//' + file\n",
     "            shutil.move(source, dest) #move to designated path\n",
     "\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "imperial-right",
    "metadata": {},
    "outputs": [],
@@ -90,13 +90,13 @@
     "    for file in os.listdir(patches_dir + '//validation//0//'):\n",
     "        if file.startswith(test_case):\n",
     "            source = patches_dir + '//validation//0//' + file\n",
-    "            dest = patches_dir + '//all//0//' + file\n",
+    "            dest = patches_dir + '//0//' + file\n",
     "            shutil.move(source, dest) #move to designated path\n",
     "\n",
     "    for file in os.listdir(patches_dir + '//validation//1//'):\n",
     "        if file.startswith(test_case):\n",
     "            source = patches_dir + '//validation//1//' + file\n",
-    "            dest = patches_dir + '//' + 'all//1//' + file\n",
+    "            dest = patches_dir + '//1//' + file\n",
     "            shutil.move(source, dest) #move to designated path\n",
     "            \n",
     "    ## Make sure test case folder is empty before deleting directory\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "fallen-mumbai",
    "metadata": {},
    "outputs": [
@@ -127,8 +127,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated slides: 17\n",
-      "Number of normal slides: 26\n"
+      "Number of annotated slides: 1\n",
+      "Number of normal slides: 1\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "valuable-interest",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "diverse-complexity",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "endless-amber",
    "metadata": {},
    "outputs": [],
@@ -374,14 +374,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of patches in metaplasia-negative training set: 179223\n",
-      "Number of patches in metaplasia-positive training set: 18667\n"
+      "Number of patches in metaplasia-negative training set: 134\n",
+      "Number of patches in metaplasia-positive training set: 106\n"
      ]
     }
    ],
    "source": [
     "#Find number of files in train//0//\n",
-    "path = data_dir + '//all//0//'\n",
+    "path = data_dir + '//0//'\n",
     "N_0 = 0\n",
     "for file in os.listdir(path):\n",
     "    if file.endswith('.tif'):\n",
@@ -391,7 +391,7 @@
     "\n",
     "#Find number of files in train//1//\n",
     "N_1 = 0\n",
-    "path = data_dir + '//all//1//'\n",
+    "path = data_dir + '//1//'\n",
     "for file in os.listdir(path):\n",
     "    if file.endswith('.tif'):\n",
     "        N_1 += 1\n",
@@ -408,13 +408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "representative-frost",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = data_dir + '//all//'\n",
-    "# dataset = datasets.ImageFolder(root = 'patches//')\n",
+    "path = data_dir\n",
     "\n",
     "## Get list of case names and class (0 or 1) for all patches\n",
     "cases = []\n",
@@ -436,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "beginning-revolution",
    "metadata": {},
    "outputs": [],
@@ -447,26 +446,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "urban-organic",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_transforms = {\n",
-    "    'all': transforms.Compose([\n",
-    "        transforms.RandomRotation(degrees=(0, 180)),\n",
-    "        transforms.RandomHorizontalFlip(),\n",
-    "        transforms.RandomVerticalFlip(),\n",
-    "        transforms.RandomResizedCrop(input_size),\n",
-    "#         transforms.Resize((256,256))\n",
-    "        transforms.ColorJitter(hue = 0.25),\n",
-    "        transforms.ColorJitter(brightness = 0.4),\n",
-    "        transforms.ColorJitter(contrast = 0.40),\n",
-    "        transforms.ColorJitter(saturation = 0.10),\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
-    "    ])\n",
-    "}"
+    "    transforms.Compose([\n",
+    "    transforms.RandomRotation(degrees=(0, 180)),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomVerticalFlip(),\n",
+    "    transforms.RandomResizedCrop(input_size),\n",
+    "    transforms.ColorJitter(hue = 0.25),\n",
+    "    transforms.ColorJitter(brightness = 0.4),\n",
+    "    transforms.ColorJitter(contrast = 0.40),\n",
+    "    transforms.ColorJitter(saturation = 0.10),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "    ])}"
    ]
   },
   {
@@ -475,32 +472,6 @@
    "metadata": {},
    "source": [
     "## Train model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "engaged-penny",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## This generates a list of negative and positive cases. \n",
-    "## Some cases have both negative and positive slides, which end up in \"postive_cases\" list\n",
-    "## Cases in negative_slides do not have ANY positive slides\n",
-    "negative_cases = []\n",
-    "positive_cases = []\n",
-    "for test_case in Counter(cases): # Each iteration represents a K-fold   \n",
-    "    ## Quick loop to determine if case is positive or negative\n",
-    "    indices = [i for i, x in enumerate(cases) if x == test_case] ## Find indices of dataset that contain test_case of interest\n",
-    "    status = 'negative'\n",
-    "    for x in indices:\n",
-    "        if classes[x] == 1:\n",
-    "            status = 'positive'\n",
-    "            break\n",
-    "    if status == 'positive':# and test_case not in cases_completed:\n",
-    "        positive_cases.append(test_case)\n",
-    "    if status == 'negative':\n",
-    "        negative_cases.append(test_case)"
    ]
   },
   {
@@ -700,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
