--- a/(3) run models on whole slides and generate heatmaps.ipynb
+++ b/(3) run models on whole slides and generate heatmaps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "special-mediterranean",
    "metadata": {},
    "outputs": [
@@ -21,20 +21,24 @@
     "import numpy as np\n",
     "import h5py\n",
     "from skimage.filters import threshold_otsu\n",
+    "from skimage.transform import rescale, resize\n",
+    "from skimage.draw import polygon as ski_polygon\n",
+    "from skimage.morphology import dilation\n",
     "from skimage import io\n",
+    "from PIL import Image\n",
     "from matplotlib import pyplot as plt\n",
+    "from matplotlib import cm\n",
     "import math\n",
     "import tifffile\n",
     "import os\n",
     "import sys\n",
     "import shutil\n",
-    "from skimage.draw import polygon as ski_polygon\n",
     "import json\n",
     "import calculate_performance as calc\n",
     "\n",
     "import openslide\n",
     "from preprocessing.datamodel import SlideManager\n",
-    "from preprocessing.processing import split_negative_slide, split_positive_slide, create_tumor_mask, rgb2gray\n",
+    "from preprocessing.processing import split_negative_slide, split_positive_slide, create_tumor_mask, create_tumor_outline, rgb2gray\n",
     "from preprocessing.util import TileMap\n",
     "\n",
     "import torch\n",
@@ -58,40 +62,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "offensive-thumb",
+   "execution_count": 56,
+   "id": "annoying-found",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def imshow(inp, title=None):\n",
-    "    \"\"\"Imshow for Tensor.\"\"\"\n",
-    "    inp = inp.numpy().transpose((1, 2, 0))\n",
-    "    mean = np.array([0.485, 0.456, 0.406])\n",
-    "    std = np.array([0.229, 0.224, 0.225])\n",
-    "    inp = std * inp + mean\n",
-    "    inp = np.clip(inp, 0, 1)\n",
-    "    plt.imshow(inp)\n",
-    "    if title is not None:\n",
-    "        plt.title(title)\n",
-    "    plt.pause(0.001)  # pause a bit so that plots are updated"
+    "def heatmap_overlay(slide, heatmap, mask, falsecolored, max_px, truncate):\n",
+    "    resize_factor = max_px/max(heatmap.shape)\n",
+    "    \n",
+    "    ## Downsample images to save memory\n",
+    "    heatmap = rescale(heatmap, resize_factor, anti_aliasing = False, preserve_range = 'True')\n",
+    "    mask = rescale(mask, resize_factor, anti_aliasing = False)\n",
+    "    \n",
+    "    fc_PIL = Image.fromarray(falsecolored) ## Convert to PIL\n",
+    "    fc_PIL = fc_PIL.resize((heatmap.shape[1], heatmap.shape[0])) ## Resize to be same size as downsampled heatmap\n",
+    "\n",
+    "    [r,c] = np.where(heatmap < truncate) ## Grab coordinates heatmap values < truncate (i.e. background value)\n",
+    "\n",
+    "    ## Define colormap\n",
+    "    cmap_trunc = 0.45 ## Adjust colormap (if you want to display yellow to red, rather than yellow-->red-->purple)\n",
+    "    heatmap_PIL = cm.magma(heatmap*cmap_trunc + (1-cmap_trunc)) ## Apply desired colormap\n",
+    "    heatmap_PIL = Image.fromarray((heatmap_PIL*255).astype('uint8')) ## Format array for PIL then convert to PIL\n",
+    "\n",
+    "    ## Define opacity mask for false colored image during heatmap blending step. Want hotspot heatmap areas (~1) to have zero falsecolored opacity (0)\n",
+    "    cmap_opacity = 1.5 ## Default = 1. Rescale colormap to increase its opacity\n",
+    "    fc_opacity = ((1-heatmap)*255/cmap_opacity).astype('uint8') ## Apply rescaling factor to bring out heatmap\n",
+    "    fc_opacity[r,c] = 255 ## Then set falsecolor opacity to white wherever heatmap is < threshold\n",
+    "    fc_opacity = Image.fromarray(fc_opacity)\n",
+    "\n",
+    "    ## Overlay the false-colored image and heatmap\n",
+    "    heatmap_fc = Image.composite(fc_PIL, heatmap_PIL, fc_opacity) #fc_opacity of 255 (or 1 if bool) --> fc image only\n",
+    "\n",
+    "    ## Overlay an outline of ground-truth annotation onto image (optional)\n",
+    "    mask_outline = create_tumor_outline(slide, level = 3)\n",
+    "    kernel = np.ones((10,10), np.uint8) \n",
+    "    mask_outline = dilation(mask_outline, kernel) ## Give mask outline a line thickness (display purposes)\n",
+    "\n",
+    "    ## Ensure mask array is the same size as heatmap array\n",
+    "    mask_outline = resize(mask_outline, output_shape = (heatmap.shape[0], heatmap.shape[1]), anti_aliasing = False, preserve_range = 'True')\n",
+    "    mask_outline = 1 - mask_outline ## Invert values so that the annotation appears black\n",
+    "    [r,c] = np.where(mask_outline == 0) ## Grab pixel locations for the annotation\n",
+    "    heatmap_fc_gt = np.array(heatmap_fc)\n",
+    "    heatmap_fc_gt[r,c,:3] = 0 ## Assign the annotation pixels as black\n",
+    "\n",
+    "    return heatmap_fc, heatmap_fc_gt"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "binary-gallery",
+   "cell_type": "markdown",
+   "id": "honey-thread",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def image_show(image, mymax, nrows=1, ncols=1, cmap='gray',size = 8):\n",
-    "    fig, ax = plt.subplots(nrows=nrows, ncols=ncols, figsize=(size, size*image.shape[0]/image.shape[1]))\n",
-    "    try:\n",
-    "        mymax\n",
-    "        ax.imshow(image, vmax = mymax, cmap='gray')\n",
-    "    except NameError:\n",
-    "        ax.imshow(image, cmap='gray')\n",
-    "    ax.axis('off')\n",
-    "    return fig, ax"
+    "## Load slide manager and parameters"
    ]
   },
   {
@@ -124,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "middle-proof",
    "metadata": {},
    "outputs": [],
@@ -159,10 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "id": "colonial-closer",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -190,7 +212,6 @@
     "    print('Model name = ' + str(model_name))\n",
     "\n",
     "    input_size = 512 # Define patch size in pixels \n",
-    "    \n",
     "    ## Compute threshold we will use to define tissue regions using Otsu\n",
     "    arr = np.asarray(slide.get_full_slide(level=4))\n",
     "    arr_gray = rgb2gray(arr)\n",
@@ -198,6 +219,9 @@
     "    \n",
     "    # Get ground truth label (2D mask)\n",
     "    mask = create_tumor_mask(slide, level=level)\n",
+    "    \n",
+    "    ## Get false-colored image (for visualization purposes)\n",
+    "    fc_im = io.imread('images//false-colored//' + str(slide.name) + '.tiff')\n",
     "\n",
     "    # #Initialize heatmap\n",
     "    slide_level0 =  np.asarray(slide.get_full_slide(level = 0))[:,:,:3]\n",
@@ -287,6 +311,10 @@
     "    ## Divide the heatmap by the division map so that all pixels represent the average of all predictions made on each patch\n",
     "    division_map[np.where(division_map == 0)] = 1\n",
     "    heatmap_fullres = heatmap_fullres/division_map\n",
+    "    \n",
+    "    ## Overlay heatmap onto false-colored image\n",
+    "    heatmap_fc, heatmap_fc_gt = heatmap_overlay(slide, heatmap_fullres, mask, fc_im, 1000, 0.45)\n",
+    "    tifffile.imwrite(prediction_folder_path + str(slide.name) + '_heatmap_fc_gt.tiff', heatmap_fc_gt, photometric = 'rgb')\n",
     "\n",
     "    ## Save the ground truth mask\n",
     "    slide_mask = np.zeros((size[1], size[0]), dtype = 'uint8')\n",
@@ -294,7 +322,7 @@
     "    slide_mask[r,c] = 255  #For solid red overlay: slide_mask[r,c,0] = 255 # slide_mask[r,c,1:] = 0\n",
     "    tifffile.imwrite(prediction_folder_path + str(slide.name) + '_ground truth.tiff', slide_mask, photometric = 'rgb')\n",
     "\n",
-    "    ## Save heatmap. Full res version as float64 (cannot open in FIJI), and downsampled version as float32 (can visualize in FIJI)\n",
+    "    ## Save full-resolution heatmap\n",
     "    tifffile.imwrite(prediction_folder_path + str(slide.name)+ '_heatmap.tiff', heatmap_fullres.astype('float64'), photometric = 'minisblack')"
    ]
   }
