cleaned up notebook 1

--- a/(1) preprocess images and save as patches.ipynb
+++ b/(1) preprocess images and save as patches.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,26 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_dir(path): ## Creates directory if path doesn't exist\n",
     "    if os.path.exists(path) == False:\n",
-    "        os.mkdirs(path)"
+    "        os.mkdir(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated slides: 1\n",
-      "Number of normal slides: 1\n"
+      "Number of annotated slides: 2\n",
+      "Number of normal slides: 2\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of negative slides = 1\n",
+      "Number of negative slides = 2\n",
       "\n",
-      "121 tiles written for case00_img01\n"
+      "121 tiles written for case00_img01\n",
+      "\n",
+      "108 tiles written for case01_img03\n"
      ]
     }
    ],
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -194,9 +196,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated slides = 1\n",
+      "Number of annotated slides = 2\n",
       "\n",
-      "106 tiles written for case00_img00\n"
+      "111 tiles written for case00_img00\n",
+      "\n",
+      "70 tiles written for case01_img02\n"
      ]
     }
    ],
@@ -237,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +249,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "13 tiles written for case00_img00\n"
+      "13 tiles written for case00_img00\n",
+      "\n",
+      "2 tiles written for case01_img02\n"
      ]
     }
    ],
@@ -360,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,13 +396,6 @@
     "\n",
     "    tifffile.imwrite(path + file, im, photometric = 'rgb')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
