updated notebooks and added second trained model

--- a/(3) run models on whole slides and generate heatmaps.ipynb
+++ b/(3) run models on whole slides and generate heatmaps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "special-mediterranean",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "annoying-found",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
     "\n",
     "    ## Overlay an outline of ground-truth annotation onto image (optional)\n",
     "    mask_outline = create_tumor_outline(slide, level = 3)\n",
-    "    kernel = np.ones((10,10), np.uint8) \n",
+    "    kernel = np.ones((5,5), np.uint8) \n",
     "    mask_outline = dilation(mask_outline, kernel) ## Give mask outline a line thickness (display purposes)\n",
     "\n",
     "    ## Ensure mask array is the same size as heatmap array\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "explicit-rescue",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "middle-proof",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "colonial-closer",
    "metadata": {
     "scrolled": true
@@ -193,8 +193,12 @@
      "text": [
       "Making predictions for case00\n",
       "Model name = fold00_model.pt\n",
+      "Making predictions for case01\n",
+      "Model name = fold01_model.pt\n",
       "Making predictions for case00\n",
-      "Model name = fold00_model.pt\n"
+      "Model name = fold00_model.pt\n",
+      "Making predictions for case01\n",
+      "Model name = fold01_model.pt\n"
      ]
     }
    ],
@@ -313,7 +317,7 @@
     "    heatmap_fullres = heatmap_fullres/division_map\n",
     "    \n",
     "    ## Overlay heatmap onto false-colored image\n",
-    "    heatmap_fc, heatmap_fc_gt = heatmap_overlay(slide, heatmap_fullres, mask, fc_im, 1000, 0.45)\n",
+    "    heatmap_fc, heatmap_fc_gt = heatmap_overlay(slide, heatmap_fullres, mask, fc_im, 1000, 0.10)\n",
     "    tifffile.imwrite(prediction_folder_path + str(slide.name) + '_heatmap_fc_gt.tiff', heatmap_fc_gt, photometric = 'rgb')\n",
     "\n",
     "    ## Save the ground truth mask\n",
@@ -325,6 +329,14 @@
     "    ## Save full-resolution heatmap\n",
     "    tifffile.imwrite(prediction_folder_path + str(slide.name)+ '_heatmap.tiff', heatmap_fullres.astype('float64'), photometric = 'minisblack')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "incorporate-leisure",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
