changed directory formatting across all notebooks, updating training notebook

--- a/(1) preprocess images and save as patches.ipynb
+++ b/(1) preprocess images and save as patches.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,8 @@
     "print('Number of negative slides = ' + str(N_negative))\n",
     "\n",
     "create_dir(DIR + 'patches//')\n",
-    "create_dir(DIR + 'patches//0//')\n",
+    "create_dir(DIR + 'patches//train_patches')\n",
+    "create_dir(DIR + 'patches//train_patches//0//')\n",
     "\n",
     "for i in range(N_negative): # specify which slides to write from\n",
     "    negative_slide = mgr.negative_slides[i] #Number indicates which negative slide\n",
@@ -170,7 +171,7 @@
     "\n",
     "    cur = 0\n",
     "    for tile, bounds in tile_iter:\n",
-    "        tifffile.imwrite(DIR + 'patches//0//' + str(negative_slide.name) + '_x' + \\\n",
+    "        tifffile.imwrite(DIR + 'patches//train_patches//0//' + str(negative_slide.name) + '_x' + \\\n",
     "                         str(bounds[0][0]) + ',y' + str(bounds[0][1]) + '_class0.tif', tile, photometric = 'rgb')\n",
     "        cur += 1\n",
     "        tm.add_tile(bounds)                            \n",
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -206,7 +207,7 @@
    ],
    "source": [
     "print('Number of annotated slides = ' + str(N_met))\n",
-    "create_dir(DIR + 'patches//1//')\n",
+    "create_dir(DIR + 'patches//train_patches//1//')\n",
     "\n",
     "for i in range(N_met):\n",
     "    positive_slide = mgr.met_slides[i] #Number indicates which positive slide\n",
@@ -224,7 +225,7 @@
     "    #write image patches to TIF files\n",
     "    cur = 0\n",
     "    for tile, bounds in tile_iter:\n",
-    "        tifffile.imwrite(DIR + 'patches//1//' + str(positive_slide.name) + '_x' + \\\n",
+    "        tifffile.imwrite(DIR + 'patches//train_patches//1//' + str(positive_slide.name) + '_x' + \\\n",
     "                         str(bounds[0][0]) + ',y' + str(bounds[0][1]) + '_class1.tif', tile, photometric = 'rgb')\n",
     "        cur += 1\n",
     "        tm.add_tile(bounds)                            \n",
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +349,7 @@
     "        else:\n",
     "            tm.add_tile(bounds)\n",
     "            negative_mask[rr_tissue, cc_tissue] = 1\n",
-    "            tifffile.imwrite(DIR + 'patches//0//' + str(positive_slide.name) + '_x' + \\\n",
+    "            tifffile.imwrite(DIR + 'patches//train_patches//0//' + str(positive_slide.name) + '_x' + \\\n",
     "                         str(bounds[0][0]) + ',y' + str(bounds[0][1]) + '_class0.tif', tile, photometric = 'rgb')\n",
     "            cur += 1\n",
     "\n",
@@ -366,11 +367,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'patches//0//'\n",
+    "path = 'patches//train_patches//0//'\n",
     "for file in os.listdir(path):\n",
     "    im = io.imread(path + file)\n",
     "    \n",
@@ -383,11 +384,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'patches//1//'\n",
+    "path = 'patches//train_patches//1//'\n",
     "for file in os.listdir(path):\n",
     "    im = io.imread(path + file)\n",
     "    ## Normalize patch to 0 - 255 for ch 0 and ch 1 (ch2 empty)\n",
