--- a/(2) run trained models on test patches.ipynb
+++ b/(2) run trained models on test patches.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "reflected-contribution",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "shaped-island",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "musical-pleasure",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "confidential-transfer",
    "metadata": {},
    "outputs": [],
@@ -113,23 +113,23 @@
     "    print('created patch-based test folder in path: ' + str(test_path) + str(test_case) + '//')\n",
     "\n",
     "    ## Copy test case 0 patches to the new folder\n",
-    "    for file in os.listdir('patches//0//'):\n",
+    "    for file in os.listdir('patches//train_patches//0//'):\n",
     "        if file.startswith(test_case):\n",
-    "            source = 'patches//0//' + file\n",
+    "            source = 'patches//train_patches//0//' + file\n",
     "            dest = test_path + str(test_case) + '//0//' + file\n",
     "            shutil.copy(source, dest) #move to designated path\n",
     "\n",
     "    ## Copy test case 1 patches to the new folder\n",
-    "    for file in os.listdir('patches//1//'):\n",
+    "    for file in os.listdir('patches//train_patches//1//'):\n",
     "        if file.startswith(test_case):\n",
-    "            source = 'patches//1//' + file\n",
+    "            source = 'patches//train_patches//1//' + file\n",
     "            dest = test_path + str(test_case) + '//1//' + file\n",
     "            shutil.copy(source, dest) #move to designated path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "rotary-startup",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "arbitrary-warrant",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "worldwide-carpet",
    "metadata": {},
    "outputs": [],
@@ -199,12 +199,12 @@
    "id": "initial-robert",
    "metadata": {},
    "source": [
-    "## Initialize directories and test images"
+    "## Initialize directories and images for case-by-case testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "czech-bleeding",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
     "\n",
     "cases_to_test = ['case00', 'case01']\n",
     "for case in cases_to_test:\n",
-    "    if os.path.exists('test//' + str(case)) == False: ## If test patches do NOT exist,\n",
+    "    if os.path.exists('patches//test//' + str(case)) == False: ## If test patches do NOT exist,\n",
     "        copy_test_case_patches('test//', case) ## then copy test patches to folder\n",
     "    print('copying test patches for ' + str(case))\n",
     "\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "overhead-intermediate",
    "metadata": {
     "scrolled": false
@@ -255,7 +255,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initializing variables\n",
       "Making predictions for case00\n",
       "Model name = fold00_model.pt\n"
      ]
@@ -296,7 +295,7 @@
    "source": [
     "for case in cases_to_test:\n",
     "    fold = int(case[-2:])\n",
-    "    patches_path = 'patches//'\n",
+    "    patches_path = 'patches//train_patches//'\n",
     "    auc_all = []\n",
     "\n",
     "    ## Initialize variables\n",
@@ -397,22 +396,6 @@
     "    np.save(prediction_path + str(case)  + '_tpr.npy', tpr[1])\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cheap-zoning",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "material-ability",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
